Fix lite här och där

--- a/design/design/Views/Home/Felanmalan.cshtml
+++ b/design/design/Views/Home/Felanmalan.cshtml
@@ -128,10 +128,16 @@
             </div>
         </div>
         <div class="col-md-4 rightdiv">
-            <p style="text-align:center;"><b>På hemsidan kan du göra felanmälan dygnet runt.</b></p>
+            <p style="text-align:center;"><br /><b>På hemsidan kan ni göra felanmälan dygnet runt.</b></p>
             <p>
-                <br />Du kan även ringa vårt kontor på telefon: 
-                <br />019-16 43 70.
+                <br /><b>
+                Om ni ej fått återkoppling inom 1-2 veckor efter att
+                felanmälan har skickats, var vänlig och ring oss på
+                telefonnummer: 019-16 43 70.
+                      </b>
+                <br />
+                <br />Ni kan även ringa vårt kontor för att göra en felanmälan 
+                <br />på telefonnummer: 019-16 43 70.
                 <br />
                 <br />Kontorets öppettider:
                 <br />Måndag – Fredag kl: 07:30-16:30.
@@ -141,9 +147,8 @@
                 <br />Efter kontorstid vid akuta ärenden,
                 <br />ring vår Jourtelefon: 010-4705758.
                 <br />
-                <br />Om ni ej fått återkoppling inom 1-2 veckor efter att
-                <br />felanmälan har skickats var vänlig och ring oss 
-                <br />på telefonnummer 019-16 43 70.
+                
+               
             </p>
         </div>
     </div>
