--- a/design/design/Views/Home/FragorOchSvar.cshtml
+++ b/design/design/Views/Home/FragorOchSvar.cshtml
@@ -410,14 +410,14 @@
             </div>
             </div>
            <div class="col-md-4 rightdiv information">
-               <p style="font-size:large;"><b>Här hittar du de vanligaste frågorna.</b></p>
-               <h4>
-                   <br />Hittar du inte svar på din fråga är du
-                   <br />välkomen att kontakta oss via e-post.
+               <h4>Här hittar ni de vanligaste frågorna.</h4>
+               <p>
+                   <br />Hittar ni inte svar på er fråga är ni
+                        välkomna att kontakta oss via e-post.
                    <br />
                    <br />Kontaktuppgifter till oss hittar ni <a class="link" href="~/Home/Kontakt">här</a>.
                    <br />
-               </h4>
+               </p>
            </div>
            <div class="row">
                
@@ -434,7 +434,19 @@
                        </div>
                        <div id="collapse24" class="panel-collapse collapse">
                            <div class="panel-body">
-                               texttexthökn ljkl
+                               <b>Information om hur bostadskön fungerar</b>
+                               <br />
+                               Bostadskön sorteras på datum och utgår från det datum som intressenmälan första gången skickades in.
+                               <br />
+                               <br />
+                               <b>För att behålla din plats i bostadskön:</b>
+                               <br />
+                               Hör du inget från oss inom 3 månader, måste du själv uppdatera din intresseanmälan
+                               innan 3 månader gått ut.
+                               Uppdatera intresseanmälan var 3:e månad till dess du blivit erbjuden lägenhet.
+                               Annars faller du automatiskt ur vår bostadskö. Uppdatering gör du genom
+                               att ringa till oss på 019-16 43 70. ( Ej uppdatering via e-post. )
+
                            </div>
                        </div>
                    </div>
@@ -446,9 +458,30 @@
                        </div>
                        <div id="collapse25" class="panel-collapse collapse">
                            <div class="panel-body">
-                               Vattnet i vattenlåsen avdunstar och då uppstår en obehaglig avloppslukt. Be en
-                               granne eller vän att spola i handfat, badkar och wc när du är borta en längre tid, så
-                               slipper du problemet.
+                               <p>
+                                   Intresseanmälan sker på vår hemsida på sidan <a class="link" href="~/Home/Intresseanmalan">Intresseanmälan</a>.
+                                   <br />
+                                <br />
+                                   <b>Efter genomförd intresseanmälan:</b>
+                                   <br />
+                                   Hör du inget från oss inom 3 månader, måste du själv uppdatera din intresseanmälan
+                                   innan 3 månader gått ut.
+                                   Detta gäller sedan i fortsättningen! Att var 3:e månad uppdatera dig.
+                                   Detta för att behålla din plats i kön, till dess du blivit erbjuden lägenhet.
+                                   Annars faller du automatiskt ur vår bostadskö. Uppdatering gör du genom
+                                   att ringa till oss på 019-16 43 70. ( Ej uppdatering via e-post. )
+                                   <br />
+                                   <br />
+                                   <b>Studentboende</b>
+                                   <br />
+                                   Intresseanmälan till studentboende sker på vår hemsida på sidan <a class="link" href="~/Home/Intresseanmalan">Intresseanmälan</a>.
+                                   <br />
+                                   <br />
+                                   <b>Seniorboende 55+</b>
+                                   <br />
+                                   Intresseanmälan till seniorboende 55+ sker på vår hemsida på sidan <a class="link" href="~/Home/Intresseanmalan">Intresseanmälan</a>.
+                               </p>
+
                            </div>
                        </div>
                    </div>
