--- a/design/design/Views/Home/Intresseanmalan.cshtml
+++ b/design/design/Views/Home/Intresseanmalan.cshtml
@@ -306,18 +306,19 @@
             </div>
         </div>
         <div class="col-md-4 rightdiv information">
-            <p style="font-size:large;"><b>På hemsidan kan du göra intresseanmälan dygnet runt.</b></p>
-            <h4>
-                <br />När du gör en intresseanmälan står du i 
-                <br />bostadskön i tre månader, det är sedan upp 
-                <br />till dig att uppdatera din anmälan för
-                <br /> att stå kvar i bostadskön.
+            <h4>På hemsidan kan ni göra intresseanmälan dygnet runt.</h4>
+            <p>
+                <br />
+                När ni gör en intresseanmälan står ni i 
+                bostadskön i tre månader, det är sedan upp 
+                till er att uppdatera er anmälan för
+                att stå kvar i bostadskön.
                 <br />
                 <br />Mer information om intresseanmälan och 
-                <br />bostadskön hittar du i <a class="link" href="~/Home/FragorOchSvar">frågor och svar</a>.
+                bostadskön hittar ni i <a class="link" href="~/Home/FragorOchSvar">frågor och svar</a>.
                 
                 <br />
-            </h4>
+            </p>
         </div>
     </div>
 </div>
