--- a/design/design/Views/Home/Nyheter.cshtml
+++ b/design/design/Views/Home/Nyheter.cshtml
@@ -33,7 +33,7 @@
                 </div>
                 <br />
                 <div class="nyhet" style="text-align: center; margin-left:5%; margin-right: 5%;">
-                    <h2>Glad påsk!</h2>
+                    <h2>Spara vatten!</h2>
                     <p style="text-align:left;">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum <br />Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
                     <p style="text-align:right;">2017-04-10</p>
                 </div>
