--- a/design/design/Views/Home/seriorboende.cshtml
+++ b/design/design/Views/Home/seriorboende.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "seriorboende";
 }
 
-<center><h2 class="sidrubrik">Seniorboende 55+</h2></center>
+<center><h2 class="sidrubrik">Våra fastigheter/Seniorboende 55+</h2></center>
 
 <div class="maincontainer1">
     <div class="maincontainer">
@@ -11,35 +11,32 @@
         <center>
             <div class="row">
                 <div class="col-lg-4">
-                    <a class="link" href="~/Home/Varafastigheter">Tillbaka till våra fastigheter</a>
+                    <a class="link" href="~/Home/Varafastigheter"><< Tillbaka till våra fastigheter</a>
                 </div>
             </div>
             <br />
             <br />
             <div class="row">
                 <div class="col-md-2">
-
                 </div>
                 <div class="col-md-8">
-                    <h3>Välkomen till seniorboendet Nära Till!</h3>
+                    
 
-                    <center><img class="img-responsive" src="~/Content/Images/BackgrundSunnanlid.jpg" alt=""></center>
-                    <h3>www.naratill.se</h3>
-
-                    <p>
-                        Seniorboendet Nära Till invigdes vintern 1997. Det är beläget i den gamla brandstationen mitt i centrala Örebro med gångavstånd till allt vad en stad kan erbjuda. Galleriorna Vågen och Krämaren ligger bara 300 meters gångväg bort. Fastigheten ägs av Fastighetsförvaltare Stieg Ekström, som ansvarar för anvisning av lägenheter samt har hand om hyreskön. Läs mer
+                    <center><img class="img-responsive" src="~/Content/Images/Senior.jpeg" alt=""></center><h3>
+                    Välkommen till seniorboendet Nära Till!</h3>
+                  
+                    <br />
+                    <p style=" text-align:left;">
+                        Nära Till klassas av Örebro kommun som ett seniorboende Kategori 3. Det är den högsta kategorin och ett erkännande av vår fina service. <br />
+                        <br />Seniorboendet Nära Till invigdes vintern 1997. Det är beläget i den gamla brandstationen mitt i centrala Örebro med gångavstånd till allt vad en stad kan erbjuda. Galleriorna Vågen och Krämaren ligger bara 300 meters gångväg bort. Fastigheten ägs av Fastighetsförvaltare Stieg Ekström, som ansvarar för anvisning av lägenheter samt har hand om hyreskön. <a class=" link" href="~/Home/Intresseanmalan">Intresseanmälan >></a>
                         <br />
-                        <br />
-
-                        Nära Till klassas av Örebro kommun som ett seniorboende Kategori 3. Det är den högsta kategorin och ett erkännande av vår fina service.
-
                     </p>
-
                 </div>
-                <div class="col-md-2">
 
-                </div>
             </div>
         </center>
+       
+            <h4 style=" text-align:center;">Vill du veta mer om seniorboendet Nära Till? Gå till seniorboendets egen hemsida <a href=" http />/www.naratill.se/" target="_blank">www.naratill.se</a>.</h4>
+        
         </div>
     </div>
