--- a/design/design/Views/Home/studentboende.cshtml
+++ b/design/design/Views/Home/studentboende.cshtml
@@ -3,14 +3,14 @@
     ViewBag.Title = "studentboende";
 }
 
-<center><h2 class="sidrubrik">Studentboende</h2></center>
+<center><h2 class="sidrubrik">Våra fastigheter/Studentboende</h2></center>
 
 <div class="maincontainer1">
     <br />
     <br />
     <div class="row">
         <div class="col-lg-4">
-        <a class="link" href="~/Home/Varafastigheter">Tillbaka till våra fastigheter</a>
+        <a class="link" href="~/Home/Varafastigheter"><< Tillbaka till våra fastigheter</a>
             </div>
     </div>
     <br />
@@ -28,7 +28,7 @@
                             <b>Antal lägenheter i fastigheten:</b> 20<br />
                             <br />
                             1 Ledig lägenhet i fastigheten<br />
-                            Gå till lediga lägenheter.
+                            <a class="link" href="~/Home/LedigaObjekt">Gå till lediga objekt >></a>
                         </p>
                         <span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/MEbdAJ2D9Wq" target="_blank"> Hitta hit</a>
 
@@ -48,7 +48,7 @@
                             <b>Antal lägenheter i fastigheten:</b> 20<br />
                             <br />
                             1 Ledig lägenhet i fastigheten<br />
-                            Gå till lediga lägenheter.
+                            <a class="link" href="~/Home/LedigaObjekt">Gå till lediga objekt >></a>
                         </p>
                         <span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/hnWNAPiqa7y" target="_blank"> Hitta hit</a>
 
@@ -67,8 +67,7 @@
                             <b>Adress:</b> Tärnvägen 12-20 <br />
                             <b>Antal lägenheter i fastigheten:</b> 20<br />
                             <br />
-                            1 Ledig lägenhet i fastigheten<br />
-                            Gå till lediga lägenheter.
+                         
                         </p>
                         <span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/GS7HuXL1pwj" target="_blank"> Hitta hit</a>
 
