--- a/design/design/Content/bootstrap.css
+++ b/design/design/Content/bootstrap.css
@@ -1100,7 +1100,7 @@ body {
   line-height: 1.42857143;
   color: #333;
   background-color: #fff;
-  background-image: url('Images/BackgrundSunnanlid.jpg');
+  background-image: url('Images/sommar.png');
   background-repeat: no-repeat;
     background-attachment: fixed;
 }
