--- a/design/design/Views/Home/Index.cshtml
+++ b/design/design/Views/Home/Index.cshtml
@@ -72,8 +72,11 @@
             <div>
                 <h2 style="text-align: left; color: #e93523">Varför ska man hyra av oss?</h2>
                 <div>
-                    <p><b>Vi har ägande, skötsel och drift i egen regi.</b></p>
-                    <p><b>Vi har lång erfarenhet av hyresfastigheter och hyresgäster.</b></p>
+                    <p style="font-size:16px;">
+                        Vi har ägande, skötsel och drift i egen regi.
+                        <br />
+                        Vi har lång erfarenhet av hyresfastigheter och hyresgäster.
+                    </p>
                     <br />
                     <br />
                 </div>
