--- a/design/design/Views/Home/LedigaObjekt.cshtml
+++ b/design/design/Views/Home/LedigaObjekt.cshtml
@@ -97,7 +97,7 @@
     
         <div class="row ledig">
             <div class="col-sm-4">
-                <center><img class="img-responsive" src="~/Content/Images/Jarnvagsgatan 26 A.jpg" alt=""></center>
+                <center><img class="img-responsive" src="~/Content/Images/Blaslampan%202%20-%203.jpg" alt=""></center>
             </div>
             <div class="col-sm-4">
            
@@ -126,13 +126,13 @@
         <hr size="1" color="#996633">
         <div class="row ledig">
             <div class="col-sm-4">
-                <center><img class="img-responsive" src="~/Content/Images/Brandstationen 6 - 3.jpg" alt=""></center>
+                <center><img class="img-responsive" src="~/Content/Images/salsm%c3%a4stargatan.PNG" alt=""></center>
             </div>
             <div class="col-sm-4">
               
                 <p>
-                    <b>Område:</b> Örebro Centralt <br />
-                    <b>Adress:</b> Badhusgatan 3 <br />
+                    <b>Område:</b> Örebro Öster <br />
+                    <b>Adress:</b> Salsmästaregatan 24-52  <br />
                     <b>Våning:</b> 1 <br />
                     <b>Antal rum:</b> 3
                     <br /><b>Hyra:</b> 10000 kr/månad
@@ -155,13 +155,13 @@
         <hr size="1" style="color:#996633">
         <div class="row ledig">
             <div class="col-sm-4">
-                <center><img class="img-responsive" src="~/Content/Images/Blaslampan 2 - 1.jpg" alt=""></center>
+                <center><img class="img-responsive" src="~/Content/Images/erikrosenbergsv%c3%a4g.PNG" alt=""></center>
             </div>
             <div class="col-sm-4">
             
                 <p>
-                    <b>Område:</b> Örebro Centralt <br />
-                    <b>Adress:</b> Slottsgatan 7 <br />
+                    <b>Område:</b> Örebro Almby <br />
+                    <b>Adress:</b> Erik Rosenbergsväg 1 <br />
                     <b>Typ:</b> Lägenhet<br />
                     <b>Antal rum:</b> 1
                     <br /><b>Hyra:</b> 3500 kr/månad
