--- a/design/design/Views/Home/Varafastigheter.cshtml
+++ b/design/design/Views/Home/Varafastigheter.cshtml
@@ -54,13 +54,13 @@
                 <div class="row divfastigheter3 objekt">
                     
                     <div class="col-md-4">
-                        <center><img class="img-responsive" src="~/Content/Images/Jarnvagsgatan 26 A.jpg" alt=""></center>
+                        <center><img class="img-responsive" src="~/Content/Images/Blaslampan%202%20-%203.jpg" alt=""></center>
                     </div>
                     <div class="col-md-5">
                         <br />
                         <p>
                             <b>Område:</b> Örebro Norr <br />
-                            <b>Adress:</b> Rynningegatan 1-7 <br />
+                            <b>Adress:</b> Rynningegatan 27-37 <br />
                             <b>Antal lägenheter i fastigheten:</b> 20<br />
                             <br />
                             1 Ledig lägenhet i fastigheten<br />
@@ -90,7 +90,7 @@
                             <b>Adress:</b> Badhusgatan 1-3 <br />
                             <b>Antal lägenheter i fastigheten:</b> 15<br />
                             <br />
-                            1 Ledig lägenhet i fastigheten<br />
+                            0 Lediga lägenheter i fastigheten<br />
                         </p>
                         <a class="link" href="~/Home/LedigaObjekt">Gå till lediga objekt >></a>
                     </div>
@@ -117,7 +117,7 @@
                             <b>Adress:</b> Slottsgatan 7 <br />
                             <b>Antal lägenheter i fastigheten:</b> 40<br />
                             <br />
-                            1 Ledig lägenhet i fastigheten<br />
+                            0 Lediga lägenheter i fastigheten<br />
                         </p>
                         <a class="link" href="~/Home/LedigaObjekt">Gå till lediga objekt >></a>
                     </div>
