--- a/design/design/Views/Home/studentboende.cshtml
+++ b/design/design/Views/Home/studentboende.cshtml
@@ -67,7 +67,9 @@
                             <b>Adress:</b> Tärnvägen 12-20 <br />
                             <b>Antal lägenheter i fastigheten:</b> 20<br />
                             <br />
-                         
+                            0 Lediga lägenheter i fastigheten
+                            <br />
+                            <a class="link" href="~/Home/LedigaObjekt">Gå till lediga objekt >></a>
                         </p>
                         <span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/GS7HuXL1pwj" target="_blank"> Hitta hit</a>
 
