kollat i bootstrap och markerat var vi ska ange css för de olika skärmstorlekarna

--- a/design/design/Content/bootstrap.css
+++ b/design/design/Content/bootstrap.css
@@ -1311,6 +1311,7 @@ p {
   font-weight: 300;
   line-height: 1.4;
 }
+
 @media (min-width: 768px) {
   .lead {
     font-size: 21px;
@@ -1829,6 +1830,7 @@ pre code {
 .col-xs-offset-0 {
   margin-left: 0;
 }
+
 @media (min-width: 768px) {
   .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
     float: left;
@@ -1986,7 +1988,26 @@ pre code {
   .col-sm-offset-0 {
     margin-left: 0;
   }
+
+  /*Nedanför här är för tablet/ipad skärm*/
+  div.nyhetindex{
+      margin-left: 3%;
+  }
+
+  div.indexcarousel{
+      margin-left: 0px;
+  }
+
+  div.lastdiv{
+      margin-top: 100px;
+  }
+  /*div._2p3a{
+    min-width: 180px;
+    width: 200px;
+  }*/
 }
+
+
 @media (min-width: 992px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
@@ -2144,6 +2165,18 @@ pre code {
   .col-md-offset-0 {
     margin-left: 0;
   }
+  
+  /*Här är för desktop*/
+
+ div.nyhetindex{
+      margin-left: 10%;
+  }
+ div.indexcarousel{
+     margin-left: 0px;
+ }
+ div.lastdiv{
+    margin-top: 100px;
+}
 }
 @media (min-width: 1200px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
@@ -2302,6 +2335,14 @@ pre code {
   .col-lg-offset-0 {
     margin-left: 0;
   }
+
+  /*Här är för Stor desktop*/
+   div.indexcarousel{
+      margin-left: 0px;
+  }
+   div.lastdiv{
+    margin-top: 100px;
+}
 }
 table {
   background-color: transparent;
@@ -6960,11 +7001,10 @@ div.objekt{
   box-shadow: 0px 5px 5px #888888;
    padding: 10px 20px;
 }
-div.lastdiv{
-    margin-top: 100px;
-}
+
 
 div.facebook{
+    text-align:center;
     color: black;
     padding: 20px 20px;
     border-radius: 10px;
