--- a/design/design/Views/Home/Index.cshtml
+++ b/design/design/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
     <br />
 
     <div class="row">
-        <div class="col-md-6" style="margin-left:30px;">
+        <div class="col-md-7 col-sm-7 col-lg-7 indexcarousel">
           
             <div class="mainbody">
                 <h2 style="text-align:center; color: #e93523">För folk som tycker om att bo!</h2>
@@ -68,7 +68,7 @@
 
 
         </div>
-        <div class="col-md-5">
+        <div class="col-md-5 col-sm-5 col-lg-5">
             <div>
                 <h2 style="text-align: left; color: #e93523">Varför ska man hyra av oss?</h2>
                 <div>
@@ -99,7 +99,7 @@
                 
             </div>
             <br />
-            <div class=" col-md-9" style="margin-left: 12%;">
+            <div class=" col-md-9 col-sm-11 nyhetindex">
                 <h2>Senaste nytt</h2>
                 <div class="nyhet " style="text-align: center; margin: auto;">
                     <h2>Glad påsk!</h2>
@@ -129,7 +129,7 @@
     <hr />
     <br />
     <br />
-    <div class="col-md-4 facebook" style="float:none; margin:auto;">
+    <div class="col-md-4 col-sm-6 facebook"  style="float:none; margin:auto;">
         <h3 style="text-align: center; color: white;">Gilla oss på Facebook.</h3>
         <br />
         <div class="fb-page" data-height="350" data-href="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><blockquote cite="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/">John Ekströms Bygg AB</a></blockquote></div>
