--- a/design/design/Views/Shared/_Layout.cshtml
+++ b/design/design/Views/Shared/_Layout.cshtml
@@ -63,11 +63,11 @@
             <footer>
                 <div class="footerinfo">
                     <div class="row">
-                        <div class=" col-md-3 first">
-                            <a href="~/Home/Index"><img src="~/Content/Images/JEbygg%20logga.png"></a>
-   
-                    </div>
-                        <div class="col-md-3 second">
+                        <div class=" col-md-3 col-sm-2 first">
+                            <a href="~/Home/Index"><img class="img-responsive" src="~/Content/Images/JEbygg%20logga.png"></a>
+
+                        </div>
+                        <div class="col-md-3 col-sm-3 second" >
                             <p style="color:#5f5f5f"><b>
                                 JOHN EKSTRÖMS BYGG AB
                                 <br /> Org. nr 556212-0468
@@ -79,23 +79,24 @@
                             </p>
                          
                         </div>
-                        <div class="col-md-3 third"> 
-                            <p style ="color: #5f5f5f"><b>
-                                KONTORETS ÖPPETTIDER
-                                <br />Måndag - fredag: 07:30 - 16:30
-                                <br />Telefontid: 09:00 - 16:00
-                                <br />Lunchstängt: 12:00 - 13:00
-                            </b>
+                        <div class="col-md-3 col-sm-4 third">
+                            <p style="color: #5f5f5f">
+                                <b>
+                                    KONTORETS ÖPPETTIDER
+                                    <br />Måndag - fredag: 07:30 - 16:30
+                                    <br />Telefontid: 09:00 - 16:00
+                                    <br />Lunchstängt: 12:00 - 13:00
+                                </b>
                             </p>
                         </div>
-                        <div class="col-md-3 fourth">
+                        <div class="col-md-3 col-sm-3 fourth">
                             <p style="color: #5f5f5f">
                                 <b>
                                     TELEFON
                                     <br />019-16 43 70
                                     <br />Jourtelefon efter kontorstid:
                                     <br />010 - 470 57 58
-                                
+
                                 </b>
                             </p>
                         </div>
