--- a/design/design/Views/Home/seriorboende.cshtml
+++ b/design/design/Views/Home/seriorboende.cshtml
@@ -36,7 +36,7 @@
             </div>
         </center>
        
-            <h4 style=" text-align:center;">Vill du veta mer om seniorboendet Nära Till? Gå till seniorboendets egen hemsida <a href=" http />/www.naratill.se/" target="_blank">www.naratill.se</a>.</h4>
+            <h4 style=" text-align:center;">Vill du veta mer om seniorboendet Nära Till? Gå till seniorboendets egen hemsida <a href="http://www.naratill.se/" target="_blank">www.naratill.se</a>.</h4>
         
         </div>
     </div>
