--- a/design/design/Views/Home/FragorOchSvar.cshtml
+++ b/design/design/Views/Home/FragorOchSvar.cshtml
@@ -6,13 +6,23 @@
 <center><h2 class="sidrubrik">Frågor och svar</h2></center>
 
 <div class="maincontainer1">
-    <br />
-    <br />
-   <div class="maincontainer" style="margin-left: 40px; margin-right: 40px;">
+<br />
+    
+   <div class="maincontainer">
        
+       <div class="col-sx-12 infosvar2">
+          
+           <p>
+               Hittar ni inte svar på er fråga är ni
+               välkomna att kontakta oss.
+               
+               Kontaktuppgifter till oss hittar ni <a class="link" href="~/Home/Kontakt">här</a>.
+               <br />
+           </p>
+       </div>
               
-                <div class="row">
-            <div class="col-sm-3 col-md-3 col-lg-3">
+            <div class="col-sm-4 col-md-3 col-lg-3">
+                <br />
                 <div id="imaginary_container">
                     <div class="input-group stylish-input-group">
                         <input type="text" class="form-control" placeholder="Sök">
@@ -23,12 +33,11 @@
                         </span>
                     </div>
                 </div>
+                <br />
             </div>
-        </div>
 
-        <br />
-        <br />
        <div class="row">
+           
        <legend style="color:#e93523">För våra hyresgäster</legend>
            <div class="panel-group col-md-6 col-sm-6 col-lg-6" id="accordion">
                <div class="panel panel-default">
@@ -419,7 +428,7 @@
                    <br />
                </p>
            </div>
-           <div class="row">
+           <div class="row rad">
                
         
        <legend style="color:#e93523">För kommande hyresgäster</legend>
