--- a/design/design/Views/Shared/_Layout.cshtml
+++ b/design/design/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
         <div class="navbar navbar-inverse">
             
             <div class="container">
-                <div class="navbar-header">
+                <div class="navbar-header"><div class="logga col-xs-4"><a href="~/Home/Index"><img class="img-responsive" src="~/Content/Images/transparent.png"></a></div>
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -63,43 +63,39 @@
             <footer>
                 <div class="footerinfo">
                     <div class="row">
-                        <div class=" col-md-3 col-sm-2 first">
+                        <div class="col-xs-5 col-md-3 col-sm-2 first">
                             <a href="~/Home/Index"><img class="img-responsive" src="~/Content/Images/JEbygg%20logga.png"></a>
 
                         </div>
-                        <div class="col-md-3 col-sm-3 second" >
-                            <p style="color:#5f5f5f"><b>
-                                JOHN EKSTRÖMS BYGG AB
-                                <br /> Org. nr 556212-0468
-                                <br />Ormestagatan 1B
-                                <br />702 83 Örebro
-                                <br />
-                                <span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/oeFiqLVaNsv" target="_blank">Hitta hit</a>
-                                </b> 
+                        <div class="col-xs-7 col-md-3 col-sm-3 second">
+                            <p>
+                               
+                                    <span class="bold">JOHN EKSTRÖMS BYGG AB</span>
+                                    <br /> Org. nr 556212-0468
+                                    <br />Ormestagatan 1B
+                                    <br />702 83 Örebro
+                                    <br />
+                                    <span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/oeFiqLVaNsv" target="_blank">Hitta hit</a>
                             </p>
-                         
+
                         </div>
-                        <div class="col-md-3 col-sm-4 third">
-                            <p style="color: #5f5f5f">
-                                <b>
-                                    KONTORETS ÖPPETTIDER
+                        <div class="col-xs-5 col-md-3 col-sm-3 fourth">
+                            <p>
+                                <span class="bold">TELEFON</span>
+                                <br />019-16 43 70
+                                <br />Jourtelefon efter kontorstid:
+                                <br />010 - 470 57 58
+                            </p>
+                        </div>
+                        <div class="col-xs-7 col-md-3 col-sm-4 third">
+                            <p>
+                                <span class="bold">KONTORETS ÖPPETTIDER</span>
                                     <br />Måndag - fredag: 07:30 - 16:30
                                     <br />Telefontid: 09:00 - 16:00
                                     <br />Lunchstängt: 12:00 - 13:00
-                                </b>
                             </p>
                         </div>
-                        <div class="col-md-3 col-sm-3 fourth">
-                            <p style="color: #5f5f5f">
-                                <b>
-                                    TELEFON
-                                    <br />019-16 43 70
-                                    <br />Jourtelefon efter kontorstid:
-                                    <br />010 - 470 57 58
-
-                                </b>
-                            </p>
-                        </div>
+                       
                     </div>
                     <div class="admin" style="text-align:center; font-size:small;">
                         <a href="~/Account/Login" style="color:grey;">Admin</a></div>
