--- a/design/design/Content/bootstrap.css
+++ b/design/design/Content/bootstrap.css
@@ -1319,6 +1319,11 @@ div.maincontainer{
     margin-left: 5px;
     margin-right: 5px;
 }
+div.omekström{
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
   div.footerinfo{
           color:#5f5f5f;
           font-size: small;
