--- a/design/design/Views/Home/Kontakt.cshtml
+++ b/design/design/Views/Home/Kontakt.cshtml
@@ -7,7 +7,7 @@
 <div class="maincontainer1">
     <div class="maincontainer">
         <div class="row">
-            <div class="col-sm-4 divleft">
+            <div class="col-sm-4 col-md-4 col-lg-4 divleft">
                 <h3 class="red">John Ekströms bygg AB</h3>
                 <p>
                     Org nr 556212-0468
@@ -17,7 +17,7 @@
                 </p>
                
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 col-md-4 col-lg-4">
                 <h3 class="red">Kontorets öppettider</h3>
                 <p>
                     Måndag - Fredag: 07.30-16.30
@@ -25,7 +25,7 @@
                     <br />Lunchstängt: 12.00-13.00
                 </p>
             </div>
-            <div class="col-sm-3">
+            <div class="col-sm-3 col-md-3 col-lg-3">
                 <h3 class="red">Telefon</h3>
                 <p>
                     Telefon: 019 16 43 70
