--- a/design/design/Views/Home/omoss.cshtml
+++ b/design/design/Views/Home/omoss.cshtml
@@ -15,7 +15,7 @@
                             <div class="col-md-2">
                             </div>
 
-                            <div class="omekström col-sm-8 col-lg-8">
+                            <div class="omekström col-md-8 col-sm-8 col-lg-8">
                                 <br />
                                 Byggmästaren John Ekström startade 1940 företaget John Ekströms byggnadsfirma. Nyckelordet i vår verksamhet är detsamma idag som det var för drygt 70 år sedan. Ordet är byggmästarkvalitét. En utgångspunkt som vi kommer hålla fast vid även i framtiden. Ekströms hus spänner över ett sekel av byggnader. Tack vare det kan vi erbjuda en rad olika typer av boendemiljöer. Vi har ca 900 hyreslägenheter i 60-talet innerstadsfastigheter. Vi här alltid noga med att sätta våra hyrsergäster i centrum. Därför strävar vi ständigt efter att skapa en trevlig och väl fungerande boendemiljö. Vi vill att våra hyresgäster ska känna trygghet, omtanke och trivsel.
                                 <br />
