fixat i kolumner, snyggat till

--- a/design/design/Views/Home/studentboende.cshtml
+++ b/design/design/Views/Home/studentboende.cshtml
@@ -9,16 +9,16 @@
     <br />
     <br />
     <div class="row">
-        <div class="col-lg-4">
+        <div class="col-sm-4 col-md-4 col-lg-4">
         <a class="link" href="~/Home/Varafastigheter"><< Tillbaka till våra fastigheter</a>
             </div>
     </div>
     <br />
     <br />
         <div class="row">
-            <div class="col-md-6">     
+            <div class="col-md-6 col-sm-6 col-lg-6">     
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-4 col-lg-4">
                         <center><img class="img-responsive" src="~/Content/Images/erikrosenbergsväg.PNG" alt=""></center>
                     </div>
                     <div class="col-md-6">
@@ -72,7 +72,8 @@
                             <a class="link" href="~/Home/LedigaObjekt">Gå till lediga objekt >></a>
                         </p>
                         <span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/GS7HuXL1pwj" target="_blank"> Hitta hit</a>
-
+                        <br />
+                        <br />
                     </div>
                 </div>
             </div>
@@ -106,7 +107,7 @@
                         </a>
                     </div>
 
-               <div>
+               <div class="col-sm-6">
                    <h3>Bra länkar för dig som är student</h3>
                    <h5>
                        <a href="https://www.willys.se/Vara-butiker/Butiker/Willys-Orebro-Almby/">Willys</a><br />
